--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "node-api",
+  "name": "podcast-api",
   "main": "server.js",
+  "engines": {
+    "node": "7.4.0"
+  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/scotch-io/node-token-authentication"
+    "url": "git://github.com/hbalenda/podcast-api"
   },
   "scripts": {
     "start": "node server.js"
   },
-  "author": "Chris Sevilleja <scotch.io>",
-  "license": "MIT",
+  "author": "Trust Issues",
   "dependencies": {
+    "contentful": "^3.8.0",
     "express": "~4.0.0",
-    "morgan": "~1.0.0",
-    "mongoose" : "~4.6.8",
-    "body-parser": "~1.0.1"
+    "request": "^2.81.0",
+    "rss-to-json": "^1.0.2"
   }
 }
