--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "contentful": "^3.8.0",
     "express": "~4.0.0",
+    "nodemailer": "^4.0.1",
     "request": "^2.81.0",
     "rss-to-json": "^1.0.2"
   }
